--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -3,3 +3,8 @@
 		<span class="nav-link-text ms-1">Dashboard</span>
 	</a>
 </li>
+<li class="nav-item">
+	<a class="nav-link text-white" href="{{ path('app_login') }}">
+		<span class="nav-link-text ms-1">Se connecter</span>
+	</a>
+</li>
