--- a/templates/livre/index.html.twig
+++ b/templates/livre/index.html.twig
@@ -1,16 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Livre index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello</h1>
-</div>
+    <h1>Livre index</h1>
 
     <table class="table">
         <thead>
@@ -41,4 +34,6 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <a href="{{ path('app_livre_new') }}">Create new</a>
 {% endblock %}
