--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -10,7 +10,8 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>actions</th>
+                <th>Livres concernés</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,11 @@
             <tr>
                 <td>{{ category.id }}</td>
                 <td>{{ category.Nom }}</td>
+        <td>
+            {% for livre in category.getLivres() %}
+                {{ livre.getTitre() }}<br>
+            {% endfor %}
+        </td>
                 <td>
                     <a href="{{ path('app_categories_show', {'id': category.id}) }}">show</a>
                     <a href="{{ path('app_categories_edit', {'id': category.id}) }}">edit</a>
