--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,44 +1,79 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}
+    Dashboard
+    
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+    .example-wrapper {
+      margin: 1em auto;
+      max-width: 800px;
+      width: 95%;
+      font: 18px/1.5 sans-serif;
+    }
+    .example-wrapper code {
+      background: #f5f5f5;
+      padding: 2px 6px;
+    }
+  </style>
 
-<div class="example-wrapper">
-    <h1>Hello</h1>
-</div>
+    <div class="example-wrapper">
+        <h1>
+            Hello
+        </h1>
+    </div>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Titre</th>
-                <th>Description</th>
-                <th>Date_de_parution</th>
-                <th>actions</th>
+                <th>
+                    Id
+                </th>
+                <th>
+                    Titre
+                </th>
+                <th>
+                    Description
+                </th>
+                <th>
+                    Date de parution
+                </th>
+                <th>
+                    Catégories
+                </th>
             </tr>
         </thead>
         <tbody>
-        {% for livre in livres %}
-            <tr>
-                <td>{{ livre.id }}</td>
-                <td>{{ livre.Titre }}</td>
-                <td>{{ livre.Description }}</td>
-                <td>{{ livre.DateDeParution ? livre.DateDeParution|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_livre_show', {'id': livre.id}) }}">show</a>
-                    <a href="{{ path('app_livre_edit', {'id': livre.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
+            {% for livre in livres %}
+                <tr>
+                    <td>
+                        {{ livre.id }}
+                    </td>
+                    <td>
+                        {{ livre.Titre }}
+                    </td>
+                    <td>
+                        {{ livre.Description }}
+                    </td>
+                    <td>
+                        {{ livre.DateDeParution ? livre.DateDeParution|date('Y-m-d') : '' }}
+                    </td>
+                    <td>
+                        {% for categories in livre.getCategories() %}
+                            {{ categories.getNom() }}
+                            <br/>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="5">
+                        no records found
+                    </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
 {% endblock %}
