--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,10 +1,25 @@
+{% if is_granted('ROLE_ADMIN') %}
+    <li class="nav-item">
+        <a class="nav-link text-white bg-gradient-primary" href="{{ path('app_admin' )}}">
+            <span class="nav-link-text ms-1">Admin</span>
+        </a>
+    </li>
+{% endif %}
 <li class="nav-item">
 	<a class="nav-link text-white" href="{{ path('app_dashboard') }}">
 		<span class="nav-link-text ms-1">Dashboard</span>
 	</a>
 </li>
-<li class="nav-item">
-	<a class="nav-link text-white" href="{{ path('app_login') }}">
-		<span class="nav-link-text ms-1">Se connecter</span>
-	</a>
-</li>
+{% if app.user %}
+    <li class="nav-item">
+        <a class="nav-link text-white" href="{{ path('app_logout') }}">
+            <span class="nav-link-text ms-1">Se Déconnecter</span>
+        </a>
+    </li>
+{% else %}
+    <li class="nav-item">
+        <a class="nav-link text-white" href="{{ path('app_login') }}">
+            <span class="nav-link-text ms-1">Se Connecter</span>
+        </a>
+    </li>
+{% endif %}
