--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Dashboard
-    
+  Dashboard
 {% endblock %}
 
 {% block body %}
-    <style>
+  <style>
     .example-wrapper {
       margin: 1em auto;
       max-width: 800px;
@@ -19,61 +18,37 @@
     }
   </style>
 
-    <div class="example-wrapper">
-        <h1>
-            Hello
-        </h1>
-    </div>
+  <div class="example-wrapper">
+    <h1>Hello</h1>
+  </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    Id
-                </th>
-                <th>
-                    Titre
-                </th>
-                <th>
-                    Description
-                </th>
-                <th>
-                    Date de parution
-                </th>
-                <th>
-                    Catégories
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for livre in livres %}
-                <tr>
-                    <td>
-                        {{ livre.id }}
-                    </td>
-                    <td>
-                        {{ livre.Titre }}
-                    </td>
-                    <td>
-                        {{ livre.Description }}
-                    </td>
-                    <td>
-                        {{ livre.DateDeParution ? livre.DateDeParution|date('Y-m-d') : '' }}
-                    </td>
-                    <td>
-                        {% for categories in livre.getCategories() %}
-                            {{ categories.getNom() }}
-                            <br/>
-                        {% endfor %}
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="5">
-                        no records found
-                    </td>
-                </tr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Titre</th>
+        <th>Description</th>
+        <th>Date de parution</th>
+        <th>Catégories</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for livre in livres %}
+        <tr>
+          <td><a href="{{ path('app_show_livre', { id: livre.id }) }}">{{ livre.Titre }}</a></td>
+          <td>{{ livre.Description }}</td>
+          <td>{{ livre.DateDeParution ? livre.DateDeParution|date('Y-m-d') : '' }}</td>
+          <td>
+            {% for categories in livre.getCategories() %}
+              {{ categories.getNom() }}
+              <br />
             {% endfor %}
-        </tbody>
-    </table>
+          </td>
+        </tr>
+      {% else %}
+        <tr>
+          <td colspan="5">no records found</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
