--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,25 +1,40 @@
 {% if is_granted('ROLE_ADMIN') %}
     <li class="nav-item">
-        <a class="nav-link text-white bg-gradient-primary" href="{{ path('app_admin' )}}">
-            <span class="nav-link-text ms-1">Admin</span>
+        <a class="nav-link text-white bg-gradient-primary" href="{{ path('app_admin' ) }}">
+            <span class="nav-link-text ms-1">
+                Admin
+            </span>
         </a>
     </li>
 {% endif %}
 <li class="nav-item">
-	<a class="nav-link text-white" href="{{ path('app_dashboard') }}">
-		<span class="nav-link-text ms-1">Dashboard</span>
-	</a>
+    <a class="nav-link text-white" href="{{ path('app_dashboard') }}">
+        <span class="nav-link-text ms-1">
+            Dashboard
+        </span>
+    </a>
 </li>
 {% if app.user %}
     <li class="nav-item">
+        <a class="nav-link text-white" href="{{ path('app_user_show', {'id': app.user.id}) }}">
+            <span class="nav-link-text ms-1">
+                Profil
+            </span>
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-white" href="{{ path('app_logout') }}">
-            <span class="nav-link-text ms-1">Se Déconnecter</span>
+            <span class="nav-link-text ms-1">
+                Se Déconnecter
+            </span>
         </a>
     </li>
 {% else %}
     <li class="nav-item">
         <a class="nav-link text-white" href="{{ path('app_login') }}">
-            <span class="nav-link-text ms-1">Se Connecter</span>
+            <span class="nav-link-text ms-1">
+                Se Connecter
+            </span>
         </a>
     </li>
 {% endif %}
